# rag_project

./: .dockerignore  .gitignore  README.md  backend.Dockerfile  check_mongo.py  docker-compose.yml  frontend.Dockerfile  pyproject.toml
app/backend/: api.py  db.py  main.py  rag.py
app/frontend/: ui.py
src/rag_project/: __init__.py
